@@ -480,6 +480,12 @@ function BodyReader(options) {
 
     function readTableRow(element) {
         var properties = element.firstOrEmpty("w:trPr");
+
+        var isDeleted = !!properties.first("w:del");
+        if (isDeleted) {
+            return emptyResult();
+        }
+
         var isHeader = !!properties.first("w:tblHeader");
         return readXmlElements(element.children).map(function(children) {
             return documents.TableRow(children, {isHeader: isHeader});
